.. _Changelog:

Changelog for snf-vncauthproxy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. _Changelog-1.5:

v1.5
====

Released: UNRELEASED

	* Add Changelog, README and docs
	* Replace Unix domain control sockets with TCP control sockets, with
	  basic authentication and SSL support.