@@ -1,3 +1,0 @@
-user password
-user1 {cleartext}password
-user2 {HA1}md5hash
